<resources>
    <string name="app_name">小世界</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="username">用户名</string>
    <string name="input_user_name">请输入用户名</string>

    <string name="password">密码</string>
    <string name="input_user_password">请输入密码</string>

    <string name="btn_login">登陆</string>
    <string name="btn_reg">注册</string>
    <string name="places_more">更&#160;&#160;&#160;&#160;多</string>
    <string name="places_nearby">附近景点</string>
    <string name="hotels_nearby">附近酒店</string>
    <string name="lighten_map">点亮地图</string>

    <string name="app_name_ui">小&#160;&#160;世&#160;&#160;界</string>

    <!-- Login UI -->
    <string name="cancel">取&#160;&#160;消</string>
    <string name="sign_up">注&#160;&#160;册</string>
    <string name="login">登&#160;&#160;录</string>
    <string name="username_login">请输入用户名</string>
    <string name="password_login">请输入密码</string>
    <string name="new_user">新&#160;用&#160;户</string>
    <string name="password_confirm">请确认密码</string>
    <string name="infoConfirm">确&#160;&#160;认</string>>

    <!-- Post UI -->
    <string name="take_photo">拍&#160;&#160;&#160;&#160;照</string>
    <string name="select_from_album">相&#160;&#160;&#160;&#160;册</string>

    <!-- Profile UI -->
    <string name="posts">动&#160;&#160;&#160;&#160;态</string>
    <string name="timeline">时&#160;&#160;光&#160;&#160;轴</string>
    <string name="about_me">关&#160;&#160;于&#160;&#160;我</string>
    <string name="my_map">我的足迹</string>
    <string name="personal_info">个人信息</string>
    <string name="profile_id">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="profile_sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="profile_intro">自我介绍</string>

    <!-- Settings UI -->
    <string name="settings">设&#160;&#160;&#160;&#160;置</string>
    <string name="accounts_setting">账号管理</string>
    <string name="password_setting">密码设置</string>
    <string name="privacy_setting">隐私设置</string>
    <string name="contact">联系我们</string>
    <string name="new_account">&#160;&#160;&#160;&#160;添加新账号</string>
    <string name="logout">确认修改</string>
    <string name="confirm">确&#160;&#160;&#160;&#160;定</string>
    <string name="old_password">请输入旧密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="viewable_to_myself">主页仅自己可见</string>
    <string name="three_days_only">仅显示三天动态</string>
    <string name="show_information">在主页显示个人信息</string>
    <string name="app_version">ver 1.1 2019</string>
    <string name="contact_us">——&#160;&#160;&#160;&#160;联系我们，让我们变得更好&#160;&#160;&#160;&#160;——</string>
    <string name="contact_num">896421174</string>
    <string name="copyright">copyright&#160;(C)&#160;2019-2020 WHU</string>
    <string name="ARR">All&#160;Rights&#160;Reserved</string>

    <!--添加笔记-->
    <string name="new_notes">添加笔记</string>
    <string name="note_hint">记录旅途生活...</string>
    <string name="others_to_see">公开发表</string>
    <string name="add_tag">添加标签</string>
    <string name="add_place">正在定位</string>
    <string name="travel_end">结束旅程</string>
    <string name="send_button">发表</string>

    <!--底部导航栏-->
    <string name="menu_square">首页</string>
    <string name="menu_follow">关注</string>
    <string name="menu_newnote">笔记</string>
    <string name="menu_message">私信</string>
    <string name="menu_aboutme">关于我</string>a

    <!--首页-->
    <string name="square_title">首&#160;&#160;&#160;&#160;页</string>
    <!--关注-->
    <string name="follow">关&#160;&#160;&#160;&#160;注</string>
    <!--通知-->
    <string name="new_msg">通&#160;&#160;&#160;&#160;知</string>
</resources>
