<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#33CCCC"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#33CCCC"
        android:contentDescription="@android:string/cancel"
        android:tint="#FFFFFF"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <Button
        android:id="@+id/confirmbutton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:background="#33CCCC"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textColor="#80000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="#80000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/passwordHead"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="@string/password_setting"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</FrameLayout>