<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6ECECEC"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#33CCCC"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/settingsHead"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <View
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF" />

    <ImageButton
        android:id="@+id/sculpture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@android:string/untitled"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/editInfoEnter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.5"
        android:background="#00FFFFFF"
        android:contentDescription="@android:string/untitled"
        android:foregroundTint="#50000000"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/bianji" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="60dp"
        android:text="username"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="110dp"
        android:text="introduction"
        android:textSize="14sp" />

    <Button
        android:id="@+id/alterAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:background="#FFFFFF"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/accounts_setting"
        android:textAlignment="textStart"
        android:textColor="#515151"
        android:textSize="18sp" />

    <Button
        android:id="@+id/setPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="211dp"
        android:background="#FFFFFF"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/password_setting"
        android:textAlignment="textStart"
        android:textColor="#515151"
        android:textSize="18sp" />

    <Button
        android:id="@+id/setPrivacy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="262dp"
        android:background="#FFFFFF"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/privacy_setting"
        android:textAlignment="textStart"
        android:textColor="#515151"
        android:textSize="18sp" />

    <Button
        android:id="@+id/contactUs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="313dp"
        android:background="#FFFFFF"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/contact"
        android:textAlignment="textStart"
        android:textColor="#515151"
        android:textSize="18sp" />

</FrameLayout>