<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReleaseDynamicsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/accounts"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#33CCCC"
            android:padding="10dp"
            android:text="@string/new_notes"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


        <Button
            android:id="@+id/note_send"
            android:layout_width="72dp"
            android:layout_height="38dp"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/send_botton"
            android:text="@string/send_button"
            android:textColor="#515151"
            android:textSize="16sp" />

    </FrameLayout>

    <EditText
        android:id="@+id/input_notes"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFFFF"
        android:gravity="top|left"
        android:hint="@string/note_hint"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textColor="#515151"
        android:textColorHint="#E5E6E8"
        android:textSize="18sp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#FFFFFFFF"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/add_pictures"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:background="#00FFFFFF"
            android:scaleType="centerCrop"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/add_picture" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#FFFFFFFF">

        <TextView
            android:id="@+id/add_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:text="正在定位"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/location"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="#F7FFFFFF"
            android:src="@mipmap/location"
            android:tint="@color/blue" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF">
        <TextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="@string/others_to_see"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/let_others_see_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:checked="true"
            android:textOff=""
            android:textOn=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF">
        <TextView
            android:id="@+id/others_to_see"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="@string/add_tag"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/to_add_tag"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            app:srcCompat="@mipmap/arrow" />
    </FrameLayout>

</LinearLayout>
